Refactor : 페어리뷰 피드백 반영
중복된 코드 제거, 오류 제거